parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> body
Rule 1     body -> statementlist
Rule 2     body -> empty
Rule 3     statementlist -> statement
Rule 4     statementlist -> statementlist statement
Rule 5     statement -> package_dec
Rule 6     statement -> var_dec
Rule 7     statement -> function_dec
Rule 8     statement -> function_call
Rule 9     statement -> comment
Rule 10    statement -> cons_dec
Rule 11    statement -> bless_st
Rule 12    statement -> return_st
Rule 13    statement -> term
Rule 14    termbinop -> term POWOP term
Rule 15    termbinop -> term MULOP term
Rule 16    termbinop -> term ADDOP term
Rule 17    termbinop -> term SHIFTOP term
Rule 18    termbinop -> term RELOP term
Rule 19    termbinop -> term EQOP term
Rule 20    termbinop -> term BITANDOP term
Rule 21    termbinop -> term BITOROP term
Rule 22    termbinop -> term DOTDOT term
Rule 23    termbinop -> term ANDAND term
Rule 24    termbinop -> term OROR term
Rule 25    termbinop -> term DORDOR term
Rule 26    termbinop -> term MATCHOP term
Rule 27    termbinop -> term WAND term
Rule 28    termbinop -> term WOR term
Rule 29    termbinop -> term WXOR term
Rule 30    termunop -> ADDOP term
Rule 31    termunop -> ! term
Rule 32    termunop -> ~ term
Rule 33    termunop -> term INCREMENT
Rule 34    termunop -> term DECREMENT
Rule 35    termunop -> term DEREF
Rule 36    termunop -> INCREMENT term
Rule 37    termunop -> DECREMENT term
Rule 38    termunop -> WNOT term
Rule 39    term -> termbinop
Rule 40    term -> termunop
Rule 41    term -> PARANTHESIS_L term PARANTHESIS_R
Rule 42    term -> NAME
Rule 43    term -> NUMBER
Rule 44    term -> STRING
Rule 45    term -> INPUT
Rule 46    term -> PRINT
Rule 47    term -> hash_exp
Rule 48    term -> Q BRACES_LEFT NAME BRACES_RIGHT
Rule 49    term -> QQ BRACES_LEFT NAME BRACES_RIGHT
Rule 50    term -> QX BRACES_LEFT NAME BRACES_RIGHT
Rule 51    package_dec -> PACKAGE NAME SEMI
Rule 52    cons_dec -> SUB NEW set_cons block
Rule 53    set_cons -> <empty>
Rule 54    bless_st -> BLESS PARANTHESIS_L argument PARANTHESIS_R SEMI
Rule 55    block -> BRACES_LEFT body BRACES_RIGHT
Rule 56    function_dec -> SUB NAME braces_left body braces_right
Rule 57    return_st -> RETURN term SEMI
Rule 58    function_call -> NAME PARANTHESIS_L argument PARANTHESIS_R SEMI
Rule 59    var_dec -> MY NAME ASSIGNOP term SEMI
Rule 60    var_dec -> MY NAME ASSIGNOP SHIFT SEMI
Rule 61    var_dec -> NAME ASSIGNOP term SEMI
Rule 62    hash_exp -> first_hash
Rule 63    hash_exp -> second_hash
Rule 64    first_hash -> PARANTHESIS_L argument PARANTHESIS_R
Rule 65    second_hash -> BRACES_LEFT argument BRACES_RIGHT
Rule 66    argument -> SHIFT
Rule 67    argument -> term
Rule 68    argument -> argument COMMA argument
Rule 69    argument -> argument HASH_OP argument
Rule 70    argument -> empty
Rule 71    INPUT -> < STDIN >
Rule 72    comment -> COMMENT
Rule 73    braces_left -> BRACES_LEFT
Rule 74    braces_right -> BRACES_RIGHT
Rule 75    empty -> <empty>

Terminals, with rules where they appear

!                    : 31
<                    : 71
>                    : 71
ADDOP                : 16 30
ANDAND               : 23
ASSIGNOP             : 59 60 61
BITANDOP             : 20
BITOROP              : 21
BLESS                : 54
BRACES_LEFT          : 48 49 50 55 65 73
BRACES_RIGHT         : 48 49 50 55 65 74
COMMA                : 68
COMMENT              : 72
DECREMENT            : 34 37
DEREF                : 35
DORDOR               : 25
DOTDOT               : 22
EQOP                 : 19
HASH_OP              : 69
INCREMENT            : 33 36
MATCHOP              : 26
MULOP                : 15
MY                   : 59 60
NAME                 : 42 48 49 50 51 56 58 59 60 61
NEW                  : 52
NUMBER               : 43
OROR                 : 24
PACKAGE              : 51
PARANTHESIS_L        : 41 54 58 64
PARANTHESIS_R        : 41 54 58 64
POWOP                : 14
PRINT                : 46
Q                    : 48
QQ                   : 49
QX                   : 50
RELOP                : 18
RETURN               : 57
SEMI                 : 51 54 57 58 59 60 61
SHIFT                : 60 66
SHIFTOP              : 17
STDIN                : 71
STRING               : 44
SUB                  : 52 56
WAND                 : 27
WNOT                 : 38
WOR                  : 28
WXOR                 : 29
error                : 
~                    : 32

Nonterminals, with rules where they appear

INPUT                : 45
argument             : 54 58 64 65 68 68 69 69
bless_st             : 11
block                : 52
body                 : 55 56 0
braces_left          : 56
braces_right         : 56
comment              : 9
cons_dec             : 10
empty                : 2 70
first_hash           : 62
function_call        : 8
function_dec         : 7
hash_exp             : 47
package_dec          : 5
return_st            : 12
second_hash          : 63
set_cons             : 52
statement            : 3 4
statementlist        : 1 4
term                 : 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 32 33 34 35 36 37 38 41 57 59 61 67
termbinop            : 39
termunop             : 40
var_dec              : 6

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . statementlist
    (2) body -> . empty
    (3) statementlist -> . statement
    (4) statementlist -> . statementlist statement
    (75) empty -> .
    (5) statement -> . package_dec
    (6) statement -> . var_dec
    (7) statement -> . function_dec
    (8) statement -> . function_call
    (9) statement -> . comment
    (10) statement -> . cons_dec
    (11) statement -> . bless_st
    (12) statement -> . return_st
    (13) statement -> . term
    (51) package_dec -> . PACKAGE NAME SEMI
    (59) var_dec -> . MY NAME ASSIGNOP term SEMI
    (60) var_dec -> . MY NAME ASSIGNOP SHIFT SEMI
    (61) var_dec -> . NAME ASSIGNOP term SEMI
    (56) function_dec -> . SUB NAME braces_left body braces_right
    (58) function_call -> . NAME PARANTHESIS_L argument PARANTHESIS_R SEMI
    (72) comment -> . COMMENT
    (52) cons_dec -> . SUB NEW set_cons block
    (54) bless_st -> . BLESS PARANTHESIS_L argument PARANTHESIS_R SEMI
    (57) return_st -> . RETURN term SEMI
    (39) term -> . termbinop
    (40) term -> . termunop
    (41) term -> . PARANTHESIS_L term PARANTHESIS_R
    (42) term -> . NAME
    (43) term -> . NUMBER
    (44) term -> . STRING
    (45) term -> . INPUT
    (46) term -> . PRINT
    (47) term -> . hash_exp
    (48) term -> . Q BRACES_LEFT NAME BRACES_RIGHT
    (49) term -> . QQ BRACES_LEFT NAME BRACES_RIGHT
    (50) term -> . QX BRACES_LEFT NAME BRACES_RIGHT
    (14) termbinop -> . term POWOP term
    (15) termbinop -> . term MULOP term
    (16) termbinop -> . term ADDOP term
    (17) termbinop -> . term SHIFTOP term
    (18) termbinop -> . term RELOP term
    (19) termbinop -> . term EQOP term
    (20) termbinop -> . term BITANDOP term
    (21) termbinop -> . term BITOROP term
    (22) termbinop -> . term DOTDOT term
    (23) termbinop -> . term ANDAND term
    (24) termbinop -> . term OROR term
    (25) termbinop -> . term DORDOR term
    (26) termbinop -> . term MATCHOP term
    (27) termbinop -> . term WAND term
    (28) termbinop -> . term WOR term
    (29) termbinop -> . term WXOR term
    (30) termunop -> . ADDOP term
    (31) termunop -> . ! term
    (32) termunop -> . ~ term
    (33) termunop -> . term INCREMENT
    (34) termunop -> . term DECREMENT
    (35) termunop -> . term DEREF
    (36) termunop -> . INCREMENT term
    (37) termunop -> . DECREMENT term
    (38) termunop -> . WNOT term
    (71) INPUT -> . < STDIN >
    (62) hash_exp -> . first_hash
    (63) hash_exp -> . second_hash
    (64) first_hash -> . PARANTHESIS_L argument PARANTHESIS_R
    (65) second_hash -> . BRACES_LEFT argument BRACES_RIGHT

    $end            reduce using rule 75 (empty -> .)
    PACKAGE         shift and go to state 14
    MY              shift and go to state 16
    NAME            shift and go to state 15
    SUB             shift and go to state 17
    COMMENT         shift and go to state 19
    BLESS           shift and go to state 20
    RETURN          shift and go to state 21
    PARANTHESIS_L   shift and go to state 18
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    PRINT           shift and go to state 27
    Q               shift and go to state 29
    QQ              shift and go to state 31
    QX              shift and go to state 32
    ADDOP           shift and go to state 33
    !               shift and go to state 34
    ~               shift and go to state 35
    INCREMENT       shift and go to state 36
    DECREMENT       shift and go to state 37
    WNOT            shift and go to state 38
    <               shift and go to state 39
    BRACES_LEFT     shift and go to state 30

    body                           shift and go to state 1
    statementlist                  shift and go to state 2
    empty                          shift and go to state 3
    statement                      shift and go to state 4
    package_dec                    shift and go to state 5
    var_dec                        shift and go to state 6
    function_dec                   shift and go to state 7
    function_call                  shift and go to state 8
    comment                        shift and go to state 9
    cons_dec                       shift and go to state 10
    bless_st                       shift and go to state 11
    return_st                      shift and go to state 12
    term                           shift and go to state 13
    termbinop                      shift and go to state 22
    termunop                       shift and go to state 23
    INPUT                          shift and go to state 26
    hash_exp                       shift and go to state 28
    first_hash                     shift and go to state 40
    second_hash                    shift and go to state 41

state 1

    (0) S' -> body .



state 2

    (1) body -> statementlist .
    (4) statementlist -> statementlist . statement
    (5) statement -> . package_dec
    (6) statement -> . var_dec
    (7) statement -> . function_dec
    (8) statement -> . function_call
    (9) statement -> . comment
    (10) statement -> . cons_dec
    (11) statement -> . bless_st
    (12) statement -> . return_st
    (13) statement -> . term
    (51) package_dec -> . PACKAGE NAME SEMI
    (59) var_dec -> . MY NAME ASSIGNOP term SEMI
    (60) var_dec -> . MY NAME ASSIGNOP SHIFT SEMI
    (61) var_dec -> . NAME ASSIGNOP term SEMI
    (56) function_dec -> . SUB NAME braces_left body braces_right
    (58) function_call -> . NAME PARANTHESIS_L argument PARANTHESIS_R SEMI
    (72) comment -> . COMMENT
    (52) cons_dec -> . SUB NEW set_cons block
    (54) bless_st -> . BLESS PARANTHESIS_L argument PARANTHESIS_R SEMI
    (57) return_st -> . RETURN term SEMI
    (39) term -> . termbinop
    (40) term -> . termunop
    (41) term -> . PARANTHESIS_L term PARANTHESIS_R
    (42) term -> . NAME
    (43) term -> . NUMBER
    (44) term -> . STRING
    (45) term -> . INPUT
    (46) term -> . PRINT
    (47) term -> . hash_exp
    (48) term -> . Q BRACES_LEFT NAME BRACES_RIGHT
    (49) term -> . QQ BRACES_LEFT NAME BRACES_RIGHT
    (50) term -> . QX BRACES_LEFT NAME BRACES_RIGHT
    (14) termbinop -> . term POWOP term
    (15) termbinop -> . term MULOP term
    (16) termbinop -> . term ADDOP term
    (17) termbinop -> . term SHIFTOP term
    (18) termbinop -> . term RELOP term
    (19) termbinop -> . term EQOP term
    (20) termbinop -> . term BITANDOP term
    (21) termbinop -> . term BITOROP term
    (22) termbinop -> . term DOTDOT term
    (23) termbinop -> . term ANDAND term
    (24) termbinop -> . term OROR term
    (25) termbinop -> . term DORDOR term
    (26) termbinop -> . term MATCHOP term
    (27) termbinop -> . term WAND term
    (28) termbinop -> . term WOR term
    (29) termbinop -> . term WXOR term
    (30) termunop -> . ADDOP term
    (31) termunop -> . ! term
    (32) termunop -> . ~ term
    (33) termunop -> . term INCREMENT
    (34) termunop -> . term DECREMENT
    (35) termunop -> . term DEREF
    (36) termunop -> . INCREMENT term
    (37) termunop -> . DECREMENT term
    (38) termunop -> . WNOT term
    (71) INPUT -> . < STDIN >
    (62) hash_exp -> . first_hash
    (63) hash_exp -> . second_hash
    (64) first_hash -> . PARANTHESIS_L argument PARANTHESIS_R
    (65) second_hash -> . BRACES_LEFT argument BRACES_RIGHT

    $end            reduce using rule 1 (body -> statementlist .)
    BRACES_RIGHT    reduce using rule 1 (body -> statementlist .)
    PACKAGE         shift and go to state 14
    MY              shift and go to state 16
    NAME            shift and go to state 15
    SUB             shift and go to state 17
    COMMENT         shift and go to state 19
    BLESS           shift and go to state 20
    RETURN          shift and go to state 21
    PARANTHESIS_L   shift and go to state 18
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    PRINT           shift and go to state 27
    Q               shift and go to state 29
    QQ              shift and go to state 31
    QX              shift and go to state 32
    ADDOP           shift and go to state 33
    !               shift and go to state 34
    ~               shift and go to state 35
    INCREMENT       shift and go to state 36
    DECREMENT       shift and go to state 37
    WNOT            shift and go to state 38
    <               shift and go to state 39
    BRACES_LEFT     shift and go to state 30

    statement                      shift and go to state 42
    package_dec                    shift and go to state 5
    var_dec                        shift and go to state 6
    function_dec                   shift and go to state 7
    function_call                  shift and go to state 8
    comment                        shift and go to state 9
    cons_dec                       shift and go to state 10
    bless_st                       shift and go to state 11
    return_st                      shift and go to state 12
    term                           shift and go to state 13
    termbinop                      shift and go to state 22
    termunop                       shift and go to state 23
    INPUT                          shift and go to state 26
    hash_exp                       shift and go to state 28
    first_hash                     shift and go to state 40
    second_hash                    shift and go to state 41

state 3

    (2) body -> empty .

    $end            reduce using rule 2 (body -> empty .)
    BRACES_RIGHT    reduce using rule 2 (body -> empty .)


state 4

    (3) statementlist -> statement .

    PACKAGE         reduce using rule 3 (statementlist -> statement .)
    MY              reduce using rule 3 (statementlist -> statement .)
    NAME            reduce using rule 3 (statementlist -> statement .)
    SUB             reduce using rule 3 (statementlist -> statement .)
    COMMENT         reduce using rule 3 (statementlist -> statement .)
    BLESS           reduce using rule 3 (statementlist -> statement .)
    RETURN          reduce using rule 3 (statementlist -> statement .)
    PARANTHESIS_L   reduce using rule 3 (statementlist -> statement .)
    NUMBER          reduce using rule 3 (statementlist -> statement .)
    STRING          reduce using rule 3 (statementlist -> statement .)
    PRINT           reduce using rule 3 (statementlist -> statement .)
    Q               reduce using rule 3 (statementlist -> statement .)
    QQ              reduce using rule 3 (statementlist -> statement .)
    QX              reduce using rule 3 (statementlist -> statement .)
    ADDOP           reduce using rule 3 (statementlist -> statement .)
    !               reduce using rule 3 (statementlist -> statement .)
    ~               reduce using rule 3 (statementlist -> statement .)
    INCREMENT       reduce using rule 3 (statementlist -> statement .)
    DECREMENT       reduce using rule 3 (statementlist -> statement .)
    WNOT            reduce using rule 3 (statementlist -> statement .)
    <               reduce using rule 3 (statementlist -> statement .)
    BRACES_LEFT     reduce using rule 3 (statementlist -> statement .)
    $end            reduce using rule 3 (statementlist -> statement .)
    BRACES_RIGHT    reduce using rule 3 (statementlist -> statement .)


state 5

    (5) statement -> package_dec .

    PACKAGE         reduce using rule 5 (statement -> package_dec .)
    MY              reduce using rule 5 (statement -> package_dec .)
    NAME            reduce using rule 5 (statement -> package_dec .)
    SUB             reduce using rule 5 (statement -> package_dec .)
    COMMENT         reduce using rule 5 (statement -> package_dec .)
    BLESS           reduce using rule 5 (statement -> package_dec .)
    RETURN          reduce using rule 5 (statement -> package_dec .)
    PARANTHESIS_L   reduce using rule 5 (statement -> package_dec .)
    NUMBER          reduce using rule 5 (statement -> package_dec .)
    STRING          reduce using rule 5 (statement -> package_dec .)
    PRINT           reduce using rule 5 (statement -> package_dec .)
    Q               reduce using rule 5 (statement -> package_dec .)
    QQ              reduce using rule 5 (statement -> package_dec .)
    QX              reduce using rule 5 (statement -> package_dec .)
    ADDOP           reduce using rule 5 (statement -> package_dec .)
    !               reduce using rule 5 (statement -> package_dec .)
    ~               reduce using rule 5 (statement -> package_dec .)
    INCREMENT       reduce using rule 5 (statement -> package_dec .)
    DECREMENT       reduce using rule 5 (statement -> package_dec .)
    WNOT            reduce using rule 5 (statement -> package_dec .)
    <               reduce using rule 5 (statement -> package_dec .)
    BRACES_LEFT     reduce using rule 5 (statement -> package_dec .)
    $end            reduce using rule 5 (statement -> package_dec .)
    BRACES_RIGHT    reduce using rule 5 (statement -> package_dec .)


state 6

    (6) statement -> var_dec .

    PACKAGE         reduce using rule 6 (statement -> var_dec .)
    MY              reduce using rule 6 (statement -> var_dec .)
    NAME            reduce using rule 6 (statement -> var_dec .)
    SUB             reduce using rule 6 (statement -> var_dec .)
    COMMENT         reduce using rule 6 (statement -> var_dec .)
    BLESS           reduce using rule 6 (statement -> var_dec .)
    RETURN          reduce using rule 6 (statement -> var_dec .)
    PARANTHESIS_L   reduce using rule 6 (statement -> var_dec .)
    NUMBER          reduce using rule 6 (statement -> var_dec .)
    STRING          reduce using rule 6 (statement -> var_dec .)
    PRINT           reduce using rule 6 (statement -> var_dec .)
    Q               reduce using rule 6 (statement -> var_dec .)
    QQ              reduce using rule 6 (statement -> var_dec .)
    QX              reduce using rule 6 (statement -> var_dec .)
    ADDOP           reduce using rule 6 (statement -> var_dec .)
    !               reduce using rule 6 (statement -> var_dec .)
    ~               reduce using rule 6 (statement -> var_dec .)
    INCREMENT       reduce using rule 6 (statement -> var_dec .)
    DECREMENT       reduce using rule 6 (statement -> var_dec .)
    WNOT            reduce using rule 6 (statement -> var_dec .)
    <               reduce using rule 6 (statement -> var_dec .)
    BRACES_LEFT     reduce using rule 6 (statement -> var_dec .)
    $end            reduce using rule 6 (statement -> var_dec .)
    BRACES_RIGHT    reduce using rule 6 (statement -> var_dec .)


state 7

    (7) statement -> function_dec .

    PACKAGE         reduce using rule 7 (statement -> function_dec .)
    MY              reduce using rule 7 (statement -> function_dec .)
    NAME            reduce using rule 7 (statement -> function_dec .)
    SUB             reduce using rule 7 (statement -> function_dec .)
    COMMENT         reduce using rule 7 (statement -> function_dec .)
    BLESS           reduce using rule 7 (statement -> function_dec .)
    RETURN          reduce using rule 7 (statement -> function_dec .)
    PARANTHESIS_L   reduce using rule 7 (statement -> function_dec .)
    NUMBER          reduce using rule 7 (statement -> function_dec .)
    STRING          reduce using rule 7 (statement -> function_dec .)
    PRINT           reduce using rule 7 (statement -> function_dec .)
    Q               reduce using rule 7 (statement -> function_dec .)
    QQ              reduce using rule 7 (statement -> function_dec .)
    QX              reduce using rule 7 (statement -> function_dec .)
    ADDOP           reduce using rule 7 (statement -> function_dec .)
    !               reduce using rule 7 (statement -> function_dec .)
    ~               reduce using rule 7 (statement -> function_dec .)
    INCREMENT       reduce using rule 7 (statement -> function_dec .)
    DECREMENT       reduce using rule 7 (statement -> function_dec .)
    WNOT            reduce using rule 7 (statement -> function_dec .)
    <               reduce using rule 7 (statement -> function_dec .)
    BRACES_LEFT     reduce using rule 7 (statement -> function_dec .)
    $end            reduce using rule 7 (statement -> function_dec .)
    BRACES_RIGHT    reduce using rule 7 (statement -> function_dec .)


state 8

    (8) statement -> function_call .

    PACKAGE         reduce using rule 8 (statement -> function_call .)
    MY              reduce using rule 8 (statement -> function_call .)
    NAME            reduce using rule 8 (statement -> function_call .)
    SUB             reduce using rule 8 (statement -> function_call .)
    COMMENT         reduce using rule 8 (statement -> function_call .)
    BLESS           reduce using rule 8 (statement -> function_call .)
    RETURN          reduce using rule 8 (statement -> function_call .)
    PARANTHESIS_L   reduce using rule 8 (statement -> function_call .)
    NUMBER          reduce using rule 8 (statement -> function_call .)
    STRING          reduce using rule 8 (statement -> function_call .)
    PRINT           reduce using rule 8 (statement -> function_call .)
    Q               reduce using rule 8 (statement -> function_call .)
    QQ              reduce using rule 8 (statement -> function_call .)
    QX              reduce using rule 8 (statement -> function_call .)
    ADDOP           reduce using rule 8 (statement -> function_call .)
    !               reduce using rule 8 (statement -> function_call .)
    ~               reduce using rule 8 (statement -> function_call .)
    INCREMENT       reduce using rule 8 (statement -> function_call .)
    DECREMENT       reduce using rule 8 (statement -> function_call .)
    WNOT            reduce using rule 8 (statement -> function_call .)
    <               reduce using rule 8 (statement -> function_call .)
    BRACES_LEFT     reduce using rule 8 (statement -> function_call .)
    $end            reduce using rule 8 (statement -> function_call .)
    BRACES_RIGHT    reduce using rule 8 (statement -> function_call .)


state 9

    (9) statement -> comment .

    PACKAGE         reduce using rule 9 (statement -> comment .)
    MY              reduce using rule 9 (statement -> comment .)
    NAME            reduce using rule 9 (statement -> comment .)
    SUB             reduce using rule 9 (statement -> comment .)
    COMMENT         reduce using rule 9 (statement -> comment .)
    BLESS           reduce using rule 9 (statement -> comment .)
    RETURN          reduce using rule 9 (statement -> comment .)
    PARANTHESIS_L   reduce using rule 9 (statement -> comment .)
    NUMBER          reduce using rule 9 (statement -> comment .)
    STRING          reduce using rule 9 (statement -> comment .)
    PRINT           reduce using rule 9 (statement -> comment .)
    Q               reduce using rule 9 (statement -> comment .)
    QQ              reduce using rule 9 (statement -> comment .)
    QX              reduce using rule 9 (statement -> comment .)
    ADDOP           reduce using rule 9 (statement -> comment .)
    !               reduce using rule 9 (statement -> comment .)
    ~               reduce using rule 9 (statement -> comment .)
    INCREMENT       reduce using rule 9 (statement -> comment .)
    DECREMENT       reduce using rule 9 (statement -> comment .)
    WNOT            reduce using rule 9 (statement -> comment .)
    <               reduce using rule 9 (statement -> comment .)
    BRACES_LEFT     reduce using rule 9 (statement -> comment .)
    $end            reduce using rule 9 (statement -> comment .)
    BRACES_RIGHT    reduce using rule 9 (statement -> comment .)


state 10

    (10) statement -> cons_dec .

    PACKAGE         reduce using rule 10 (statement -> cons_dec .)
    MY              reduce using rule 10 (statement -> cons_dec .)
    NAME            reduce using rule 10 (statement -> cons_dec .)
    SUB             reduce using rule 10 (statement -> cons_dec .)
    COMMENT         reduce using rule 10 (statement -> cons_dec .)
    BLESS           reduce using rule 10 (statement -> cons_dec .)
    RETURN          reduce using rule 10 (statement -> cons_dec .)
    PARANTHESIS_L   reduce using rule 10 (statement -> cons_dec .)
    NUMBER          reduce using rule 10 (statement -> cons_dec .)
    STRING          reduce using rule 10 (statement -> cons_dec .)
    PRINT           reduce using rule 10 (statement -> cons_dec .)
    Q               reduce using rule 10 (statement -> cons_dec .)
    QQ              reduce using rule 10 (statement -> cons_dec .)
    QX              reduce using rule 10 (statement -> cons_dec .)
    ADDOP           reduce using rule 10 (statement -> cons_dec .)
    !               reduce using rule 10 (statement -> cons_dec .)
    ~               reduce using rule 10 (statement -> cons_dec .)
    INCREMENT       reduce using rule 10 (statement -> cons_dec .)
    DECREMENT       reduce using rule 10 (statement -> cons_dec .)
    WNOT            reduce using rule 10 (statement -> cons_dec .)
    <               reduce using rule 10 (statement -> cons_dec .)
    BRACES_LEFT     reduce using rule 10 (statement -> cons_dec .)
    $end            reduce using rule 10 (statement -> cons_dec .)
    BRACES_RIGHT    reduce using rule 10 (statement -> cons_dec .)


state 11

    (11) statement -> bless_st .

    PACKAGE         reduce using rule 11 (statement -> bless_st .)
    MY              reduce using rule 11 (statement -> bless_st .)
    NAME            reduce using rule 11 (statement -> bless_st .)
    SUB             reduce using rule 11 (statement -> bless_st .)
    COMMENT         reduce using rule 11 (statement -> bless_st .)
    BLESS           reduce using rule 11 (statement -> bless_st .)
    RETURN          reduce using rule 11 (statement -> bless_st .)
    PARANTHESIS_L   reduce using rule 11 (statement -> bless_st .)
    NUMBER          reduce using rule 11 (statement -> bless_st .)
    STRING          reduce using rule 11 (statement -> bless_st .)
    PRINT           reduce using rule 11 (statement -> bless_st .)
    Q               reduce using rule 11 (statement -> bless_st .)
    QQ              reduce using rule 11 (statement -> bless_st .)
    QX              reduce using rule 11 (statement -> bless_st .)
    ADDOP           reduce using rule 11 (statement -> bless_st .)
    !               reduce using rule 11 (statement -> bless_st .)
    ~               reduce using rule 11 (statement -> bless_st .)
    INCREMENT       reduce using rule 11 (statement -> bless_st .)
    DECREMENT       reduce using rule 11 (statement -> bless_st .)
    WNOT            reduce using rule 11 (statement -> bless_st .)
    <               reduce using rule 11 (statement -> bless_st .)
    BRACES_LEFT     reduce using rule 11 (statement -> bless_st .)
    $end            reduce using rule 11 (statement -> bless_st .)
    BRACES_RIGHT    reduce using rule 11 (statement -> bless_st .)


state 12

    (12) statement -> return_st .

    PACKAGE         reduce using rule 12 (statement -> return_st .)
    MY              reduce using rule 12 (statement -> return_st .)
    NAME            reduce using rule 12 (statement -> return_st .)
    SUB             reduce using rule 12 (statement -> return_st .)
    COMMENT         reduce using rule 12 (statement -> return_st .)
    BLESS           reduce using rule 12 (statement -> return_st .)
    RETURN          reduce using rule 12 (statement -> return_st .)
    PARANTHESIS_L   reduce using rule 12 (statement -> return_st .)
    NUMBER          reduce using rule 12 (statement -> return_st .)
    STRING          reduce using rule 12 (statement -> return_st .)
    PRINT           reduce using rule 12 (statement -> return_st .)
    Q               reduce using rule 12 (statement -> return_st .)
    QQ              reduce using rule 12 (statement -> return_st .)
    QX              reduce using rule 12 (statement -> return_st .)
    ADDOP           reduce using rule 12 (statement -> return_st .)
    !               reduce using rule 12 (statement -> return_st .)
    ~               reduce using rule 12 (statement -> return_st .)
    INCREMENT       reduce using rule 12 (statement -> return_st .)
    DECREMENT       reduce using rule 12 (statement -> return_st .)
    WNOT            reduce using rule 12 (statement -> return_st .)
    <               reduce using rule 12 (statement -> return_st .)
    BRACES_LEFT     reduce using rule 12 (statement -> return_st .)
    $end            reduce using rule 12 (statement -> return_st .)
    BRACES_RIGHT    reduce using rule 12 (statement -> return_st .)


state 13

    (13) statement -> term .
    (14) termbinop -> term . POWOP term
    (15) termbinop -> term . MULOP term
    (16) termbinop -> term . ADDOP term
    (17) termbinop -> term . SHIFTOP term
    (18) termbinop -> term . RELOP term
    (19) termbinop -> term . EQOP term
    (20) termbinop -> term . BITANDOP term
    (21) termbinop -> term . BITOROP term
    (22) termbinop -> term . DOTDOT term
    (23) termbinop -> term . ANDAND term
    (24) termbinop -> term . OROR term
    (25) termbinop -> term . DORDOR term
    (26) termbinop -> term . MATCHOP term
    (27) termbinop -> term . WAND term
    (28) termbinop -> term . WOR term
    (29) termbinop -> term . WXOR term
    (33) termunop -> term . INCREMENT
    (34) termunop -> term . DECREMENT
    (35) termunop -> term . DEREF

  ! shift/reduce conflict for ADDOP resolved as shift
  ! shift/reduce conflict for INCREMENT resolved as shift
  ! shift/reduce conflict for DECREMENT resolved as shift
    PACKAGE         reduce using rule 13 (statement -> term .)
    MY              reduce using rule 13 (statement -> term .)
    NAME            reduce using rule 13 (statement -> term .)
    SUB             reduce using rule 13 (statement -> term .)
    COMMENT         reduce using rule 13 (statement -> term .)
    BLESS           reduce using rule 13 (statement -> term .)
    RETURN          reduce using rule 13 (statement -> term .)
    PARANTHESIS_L   reduce using rule 13 (statement -> term .)
    NUMBER          reduce using rule 13 (statement -> term .)
    STRING          reduce using rule 13 (statement -> term .)
    PRINT           reduce using rule 13 (statement -> term .)
    Q               reduce using rule 13 (statement -> term .)
    QQ              reduce using rule 13 (statement -> term .)
    QX              reduce using rule 13 (statement -> term .)
    !               reduce using rule 13 (statement -> term .)
    ~               reduce using rule 13 (statement -> term .)
    WNOT            reduce using rule 13 (statement -> term .)
    <               reduce using rule 13 (statement -> term .)
    BRACES_LEFT     reduce using rule 13 (statement -> term .)
    $end            reduce using rule 13 (statement -> term .)
    BRACES_RIGHT    reduce using rule 13 (statement -> term .)
    POWOP           shift and go to state 43
    MULOP           shift and go to state 44
    ADDOP           shift and go to state 45
    SHIFTOP         shift and go to state 46
    RELOP           shift and go to state 47
    EQOP            shift and go to state 48
    BITANDOP        shift and go to state 49
    BITOROP         shift and go to state 50
    DOTDOT          shift and go to state 51
    ANDAND          shift and go to state 52
    OROR            shift and go to state 53
    DORDOR          shift and go to state 54
    MATCHOP         shift and go to state 55
    WAND            shift and go to state 56
    WOR             shift and go to state 57
    WXOR            shift and go to state 58
    INCREMENT       shift and go to state 59
    DECREMENT       shift and go to state 60
    DEREF           shift and go to state 61

  ! ADDOP           [ reduce using rule 13 (statement -> term .) ]
  ! INCREMENT       [ reduce using rule 13 (statement -> term .) ]
  ! DECREMENT       [ reduce using rule 13 (statement -> term .) ]


state 14

    (51) package_dec -> PACKAGE . NAME SEMI

    NAME            shift and go to state 62


state 15

    (61) var_dec -> NAME . ASSIGNOP term SEMI
    (58) function_call -> NAME . PARANTHESIS_L argument PARANTHESIS_R SEMI
    (42) term -> NAME .
